--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@ Front-end Developer: leoneloliver@gmail.com
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/> -->
   <title>NASA</title>
-
   <!-- CSS  -->
   <link href="css/style.css" rel="stylesheet">
-  
 </head>
 <body>
-  
 <div id="header">
   <img src="images/nasa-logo.png">
 </div>
@@ -89,11 +86,7 @@ Front-end Developer: leoneloliver@gmail.com
 <div id="camera">
   <img src="images/camera.gif">
 </div>
-
   <!--  Scripts-->
-
   <script src="js/script.js"></script>
-
-
 </body>
 </html>
