--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ Front-end Developer: leoneloliver@gmail.com
   <img src="images/nasa-logo.png">
 </div>
 <div id="map">
-  <div id="rover1" class="rover initial"></div>
-  <div id="rover2" class="rover initial"></div>
-  <div id="rover3" class="rover initial"></div>
-  <div id="rover4" class="rover initial"></div>
+  <div id="rover1" class="rover moving initial"></div>
+  <div id="rover2" class="rover moving initial"></div>
+  <div id="rover3" class="rover moving initial"></div>
+  <div id="rover4" class="rover moving initial"></div>
 </div>
 <div id="console">
-  <p> >_ Welcome to Rover Mars mission!</p>
+  <p> >_ Welcome to NASA Mars2020 mission!</p>
 </div>
 <div id="mapbg"></div>
 <div id="controls">
